# ViewAlyzer

./: .gitignore  LICENSE  README.md  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Example-Projects/: README.md
Example-Projects/Desktop-CPP-UDP/: CMakeLists.txt  Desktop-CPP-UDP.vaschema  main.cpp
Example-Projects/Nucelo_G474_VA/: .mxproject  CMakeLists.txt
Example-Projects/Nucelo_G474_VA/Core/Inc/: FreeRTOSConfig.h  ViewAlyzerConfig_V10_4_Plus.h
Example-Projects/Nucelo_G474_VA/Core/Src/: app_freertos.c  main.c
Example-Projects/Nucelo_G474_VA/ViewAlyzer/: ViewAlyzer.c
Example-Projects/Nucelo_G474_VA/cmake/stm32cubemx/: CMakeLists.txt
Example-Projects/Nucleo_F103_VA/: .mxproject  CMakeLists.txt  compile_commands.json
Example-Projects/Nucleo_F103_VA/Core/Inc/: FreeRTOSConfig.h  ViewAlyzerConfig.h  stm32f1xx_it.h
Example-Projects/Nucleo_F103_VA/Core/Src/: freertos.c  main.c  stm32f1xx_it.c
Example-Projects/Nucleo_F103_VA/ViewAlyzer/: ViewAlyzer.c  ViewAlyzer.h
Example-Projects/Nucleo_F446RE/: CMakeLists.txt  Nucleo_F446RE.ioc
Example-Projects/Nucleo_F446RE/Core/Inc/: FreeRTOSConfig.h
Example-Projects/Nucleo_F446RE/Core/Src/: freertos.c  main.c
Example-Projects/Nucleo_F446RE/SEGGER_RTT/: SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
Example-Projects/Nucleo_F446RE/ViewAlyzer/: ViewAlyzer.c  ViewAlyzer.h
Example-Projects/Nucleo_F446RE/cmake/stm32cubemx/: CMakeLists.txt
Example-Projects/Nucleo_G474_VA/: CMakeLists.txt  Nucelo_G474_VA.ioc  nucleo_g474_freertos.vaschema
Example-Projects/Nucleo_G474_VA/Core/Src/: main.c
Example-Projects/Nucleo_U385/: .mxproject  CMakeLists.txt  compile_commands.json
Example-Projects/Nucleo_U385/Core/Inc/: FreeRTOSConfig.h  main.h  stm32u3xx_it.h
Example-Projects/Nucleo_U385/Core/Src/: app_freertos.c  gpio.c  main.c  stm32u3xx_it.c
Example-Projects/Nucleo_U385/cmake/: gcc-arm-none-eabi.cmake
Example-Projects/STM32-Zephyr-VA-Module-Sample/: CMakeLists.txt  README.md  TUTORIAL.md  build.py  nucleo_g474_zephyr_swo.vaschema  nucleo_h5_zephyr_swo.vaschema  prj.conf  stm32h750b_zephyr_openocd_swo.vaschema  west.yml
Example-Projects/STM32-Zephyr-VA-Module-Sample/boards/: nucleo_f446re.conf  nucleo_h503rb.conf
Example-Projects/STM32-Zephyr-VA-Module-Sample/src/: MAIN_FULL.TXT  main.c  simple_main.txt
Example-Projects/baremetal/: README.md
Example-Projects/freertos/: README.md
Example-Projects/freertos/Nucleo_F103_VA/: CMakeLists.txt  Nucleo_F103_VA.ioc  build.ninja
Example-Projects/freertos/Nucleo_F103_VA/Core/Inc/: FreeRTOSConfig.h
Example-Projects/freertos/Nucleo_F103_VA/Core/Src/: gpio.c  main.c
Example-Projects/freertos/Nucleo_F446RE/: .mxproject  CMakeLists.txt  nucleo_f446re_rtt_demo.vaschema
Example-Projects/freertos/Nucleo_F446RE/Core/Inc/: FreeRTOSConfig.h
Example-Projects/freertos/Nucleo_F446RE/Core/Src/: freertos.c
Example-Projects/freertos/Nucleo_F446RE/SEGGER_RTT/: SEGGER_RTT.c
Example-Projects/freertos/Nucleo_G474_VA/: CMakeLists.txt
Example-Projects/freertos/Nucleo_G474_VA/Core/Inc/: FreeRTOSConfig.h
Example-Projects/freertos/Nucleo_G474_VA/cmake/stm32cubemx/: CMakeLists.txt
Example-Projects/freertos/Nucleo_U385/: CMakeLists.txt  Nucleo_U385.ioc  build.ninja
Example-Projects/freertos/Nucleo_U385/Core/Inc/: FreeRTOSConfig.h  app_freertos.h  stm32u3xx_hal_conf.h
Example-Projects/freertos/Nucleo_U385/Core/Src/: app_freertos.c  main.c  stm32u3xx_hal_msp.c  stm32u3xx_hal_timebase_tim.c
Example-Projects/freertos/Nucleo_U385/cmake/stm32cubemx/: CMakeLists.txt
Example-Projects/zephyr/: README.md
Example-Projects/zephyr/STM32-Zephyr-VA-Module-Full-Demo/: CMakeLists.txt  README.md  TUTORIAL.md  build.py  nucleo_f446re_zephyr_rtt.vaschema
Example-Projects/zephyr/STM32-Zephyr-VA-Module-Full-Demo/src/: main.c  main.h  simple_main.txt
Example-Projects/zephyr/STM32-Zephyr-VA-Module-HelloWorld/: CMakeLists.txt  README.md  prj.conf
Example-Projects/zephyr/STM32-Zephyr-VA-Module-HelloWorld/src/: main.c
Example-Projects/zephyr/STM32-Zephyr-VA-Module-Sample/: TUTORIAL.md  build.py  nucleo_g474_zephyr_swo.vaschema  nucleo_h5_zephyr_swo.vaschema  prj.conf  stm32h750b_zephyr_openocd_swo.vaschema
Example-Projects/zephyr/STM32-Zephyr-VA-Module-Sample/a/: nucleo_g474re.cfg
Example-Projects/zephyr/STM32-Zephyr-VA-Module-Sample/boards/: nucleo_g474re.conf  stm32h750b_dk.conf
ViewAlyzerRecorder/: README.md  ViewAlyzer.c  ViewAlyzer.h  ViewAlyzerFreeRTOSHook.h  ViewAlyzerFreeRTOSHook_V10_4_Plus.h
ViewAlyzerRecorder/c/: CMakeLists.txt  README.md  viewalyzer_cobs.h  viewalyzer_udp.c  viewalyzer_udp.h  viewalyzer_udp_rtos.c  viewalyzer_udp_rtos.h
ViewAlyzerRecorder/c/examples/: desktop_example.c  desktop_example_cpp.cpp
ViewAlyzerRecorder/core/: README.md  VA_Internal.h  ViewAlyzer.c  ViewAlyzer.h  viewalyzer_cobs.c
ViewAlyzerRecorder/core/backup_pre_refactor/: ViewAlyzer.c  ViewAlyzer.h
ViewAlyzerRecorder/freertos/: README.md  VA_Adapter_FreeRTOS.c  VA_Adapter_FreeRTOS.h  ViewAlyzerFreeRTOSHook.h  ViewAlyzerFreeRTOSHook_V10_4_Plus.h
ViewAlyzerRecorder/python/: README.md  pyproject.toml
ViewAlyzerRecorder/python/examples/: basic_example.py  comprehensive_example.py
ViewAlyzerRecorder/python/viewalyzer/: __init__.py  cobs.py  protocol.py  protocol_rtos.py  sender.py  sender_rtos.py
ViewAlyzerRecorder/python/viewalyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ViewAlyzerRecorder/zephyr/: CMakeLists.txt  Kconfig  README.md  VA_Adapter_Zephyr.c  VA_Adapter_Zephyr.h  main.h  module.yml  tracing_user.h
docs/: architecture.md  porting-guide.md  quickstart.md
